--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -620,6 +620,46 @@ year= {2016},
   publisher={Cambridge University Press}
 }
 
+@inproceedings{Agirre2007UBC,
+ author = {Agirre, Eneko and Soroa, Aitor},
+ title = {UBC-AS: A Graph Based Unsupervised System for Induction and Classification},
+ booktitle = {Proceedings of the 4th International Workshop on Semantic Evaluations},
+ series = {SemEval '07},
+ year = {2007},
+ location = {Prague, Czech Republic},
+ pages = {346--349},
+ numpages = {4},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@inproceedings{Pedersen2010,
+ author = {Pedersen, Ted},
+ title = {Duluth-WSI: SenseClusters Applied to the Sense Induction Task of SemEval-2},
+ booktitle = {Proceedings of the 5th International Workshop on Semantic Evaluation},
+ series = {SemEval '10},
+ year = {2010},
+ location = {Los Angeles, California},
+ pages = {363--366},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1859664.1859745},
+ acmid = {1859745},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+
+
+@inproceedings{JurgensS10,
+  author    = {David Jurgens and
+               Keith Stevens},
+  title     = {{HERMIT:} Flexible Clustering for the SemEval-2 {WSI} Task},
+  booktitle = {SemEval@ACL},
+  pages     = {359--362},
+  publisher = {The Association for Computer Linguistics},
+  year      = {2010}
+}
+
 
 
 @InProceedings{Agirre2007,
