--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -4,7 +4,6 @@
 %\usepackage[utf8]{inputenc}
 %\usepackage{lmodern}
 \usepackage[T1]{fontenc}
-
 %\usepackage[babel=true]{microtype}
 \usepackage[sc,osf]{mathpazo}   % With old-style figures and real smallcaps.
 \linespread{1.025}  
@@ -13,9 +12,6 @@
 \usepackage[euler-digits,small]{eulervm}
 
 %\AtBeginDocument{\renewcommand{\hbar}{\hslash}}
-
-
-
 \usepackage[left=1.3in,right=1.2in,top=1.1in,bottom=1.1in,includefoot,includehead,headheight=13.6pt]{geometry}
 %\parindent 0pt
 %\parskip 1ex
@@ -33,8 +29,8 @@
 \usepackage{booktabs}
 \usepackage{caption}
 \usepackage{subcaption}
-
 \usepackage{afterpage}
+
 % Glossary / list of abbreviations
 \usepackage{blindtext}
 \usepackage[intoc]{nomencl}
@@ -56,7 +52,7 @@
   \DeclareGraphicsExtensions{.ps,.eps}
   \usepackage[a4paper,dvipdfm,pagebackref,hyperindex=true]{hyperref}
 \fi
-
+\usepackage{pgfplots}
 \graphicspath{{.}{images/}}
 
 % nicer backref links
